css/skin.css
/* ... */
.scheme_light .page_wrap,
.scheme_light .copy_wrap,
.scheme_light .sidebar_cart,
.scheme_light .widget_area_inner {
  background-color: #f7f7f7;
}

.article_style_boxed.layout_excerpt .content,
.article_style_boxed[class*="single-"] .content > article,
.article_style_boxed[class*="single-"] .content > .comments_wrap,
.article_style_boxed:not(.layout_excerpt) .content .post_item {
  background-color: #ffffff;
}

/* Sections */
.grey_section{
  background-color: #f4f8f9;
}

.skyblue_section {
    background-color: #83CDC8;
}

.skyblue_section > .sc_section_style_1 { color: #fff; padding: 3.1%; width: 516px; margin-left: 0px; background-color: inherit;}

.skyblue_section > .sc_section_style_1 .sc_title_style_5 {margin-bottom: 25px;}

.darkblue_section {
  background-color: #12252d;
}

/* 7.1 Top panel
-------------------------------------------------------------- */
.sidebar_outer_logo .logo_main,
.top_panel_wrap .logo_main{
  height:30px;
}

.top_panel_wrap_inner {
  background-color: #ffffff;
}

.top_panel_fixed .top_panel_position_over.top_panel_wrap_inner {
  background-color: #f7f7f7 !important;
}

.top_panel_fixed .menu_main_wrap{
  padding-top:calc(inherit*0.3);
}
.top_panel_fixed .top_panel_wrap .logo{
  margin-top:calc(inherit*0.6);
  margin-bottom:calc(inherit*0.6);
}

.top_panel_inner_style_3 .top_panel_cart_button,
.top_panel_inner_style_4 .top_panel_cart_button {
  /*background-color: rgba(24, 151, 153, 0.2);*/
}
.top_panel_inner_style_3 .top_panel_cart_button,
.top_panel_inner_style_4 .top_panel_cart_button{
  background-color:#83CDC8;
}
.top_panel_middle .sidebar_cart:after,
.top_panel_middle .sidebar_cart {
  border-color: #e4e7e8;
}

.top_panel_middle .sidebar_cart:after,
.top_panel_middle .sidebar_cart,
.top_panel_top .sidebar_cart {
  background-color: #f4f8f9;
}

.top_panel_inner_style_3 .top_panel_top .sidebar_cart,
.top_panel_inner_style_4 .top_panel_top .sidebar_cart {
  color: #ffffff;
}

.top_panel_inner_style_5 .top_panel_top,
.top_panel_inner_style_3 .top_panel_top .sidebar_cart,
.top_panel_inner_style_4 .top_panel_top .sidebar_cart {
  background-color: #f4f8f9;
}

.top_panel_top {
  background-color: #12252d;
  color: #747e81;
}

.top_panel_top .sc_socials.sc_socials_type_icons a {
  background-color: transparent;
  color: #747e81;
}

.top_panel_top .sc_socials.sc_socials_type_icons a:hover {
  background-color: transparent;
}

.top_panel_top a {
  color: #8a8a8a;
}

.top_panel_top a:hover{
  color:#83CDC8;
}

.top_panel_title.top_panel_style_1 .top_panel_title_inner {
  background-color: #12252d;
}

.top_panel_title.top_panel_style_1 .top_panel_title_inner .page_title, 
.top_panel_title.top_panel_style_1 .top_panel_title_inner .breadcrumbs .breadcrumbs_item, 
.top_panel_title.top_panel_style_1 .top_panel_title_inner .breadcrumbs .breadcrumbs_delimiter {
  color: #fff;
}

.top_panel_inner_style_3  .top_panel_middle {
  background-color: #fff;
}

.top_panel_inner_style_4  .top_panel_middle {
  background-color: #f4f8f9;
}

.widget_shopping_cart .buttons .button:nth-child(2) {
  color: #fff;
}

.top_panel_inner_style_5 .top_panel_top {
  background-color: #12252d;
}

.top_panel_top .menu_user_nav > li > a {
  color: #747e81;
}

.top_panel_top .menu_user_nav > li > a.top_panel_cart_button {
  color: #fff;
}

.widget_shopping_cart ul.cart_list > li > a {
  color: #12252d;
}

.top_panel_inner_style_1 .widget_shopping_cart .quantity, 
.top_panel_inner_style_1 .widget_shopping_cart .quantity .amount,
.top_panel_inner_style_4 .widget_shopping_cart .quantity, 
.top_panel_inner_style_4 .widget_shopping_cart .quantity .amount,
.top_panel_inner_style_5 .widget_shopping_cart .quantity, 
.top_panel_inner_style_5 .widget_shopping_cart .quantity .amount,
.top_panel_inner_style_6 .widget_shopping_cart .quantity ,
.top_panel_inner_style_6 .widget_shopping_cart .quantity .amount,
.top_panel_inner_style_7 .widget_shopping_cart .quantity ,
.top_panel_inner_style_7 .widget_shopping_cart .quantity .amount {
  color: #747e81;
}

.top_panel_inner_style_1 .widget_shopping_cart .total,
.top_panel_inner_style_4 .widget_shopping_cart .total,
.top_panel_inner_style_5 .widget_shopping_cart .total,
.top_panel_inner_style_6 .widget_shopping_cart .total,
.top_panel_inner_style_7 .widget_shopping_cart .total {
  border: 1px solid #e9edee;
  border-width: 1px 0;
}

.widget_shopping_cart ul li a:hover{
  color:#83CDC8;
}
.widget_shopping_cart .buttons .button{
  color:#83CDC8;
}

/* User menu */
.menu_user_nav > li > a {
  color: #8a8a8a;
}

.menu_user_nav>li>a:hover{
  color:#83CDC8;
}

.menu_user_nav>li>ul:after,
.menu_user_nav>li ul{
  border-color:#83CDC8;
}

.top_panel_inner_style_3 .menu_user_nav > li > a:hover,
.top_panel_inner_style_4 .menu_user_nav > li > a:hover {
  color: #ffffff;
}

.menu_user_nav > li ul:not(.cart_list) {
  background-color: #f4f8f9;
}

.top_panel_inner_style_1 .menu_user_nav > li > ul:after,
.top_panel_inner_style_2 .menu_user_nav > li > ul:after {
  border-color: #e4e7e8;
}

.top_panel_inner_style_1 .menu_user_nav > li > ul:after,
.top_panel_inner_style_2 .menu_user_nav > li > ul:after {
  background-color: #ffffff;
}

.top_panel_inner_style_3 .menu_user_nav > li > ul:after,
.top_panel_inner_style_4 .menu_user_nav > li > ul:after,
.top_panel_inner_style_5 .menu_user_nav > li > ul:after,
.top_panel_inner_style_1 .menu_user_nav > li ul,
.top_panel_inner_style_3 .menu_user_nav > li ul,
.top_panel_inner_style_4 .menu_user_nav > li ul,
.top_panel_inner_style_5 .menu_user_nav > li ul {
  color: #12252D;
}

.menu_user_nav > li > ul ul {
  left: 12em;
  margin-left: 4px;
}

.menu_user_nav > li > ul ul.submenu_left {
  left: -12em;
  margin-left: -1px;
}

.menu_user_nav > li ul li a {
  color: #8a8a8a;
}

.menu_user_nav > li.menu_user_controls .user_avatar {
  border-color: #e4e7e8;
}
/* ... */

